# pace_view

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt  requirements_copy.txt
.github/templates/: PULL_REQUEST.md
.github/workflows/: tests.yml
assets/: styles.css  theme.js
docs/: index.rst
docs/source/: README.md  conf.py  index.rst
examples/: activity_detail_page_example.py  context_trainer_text_example.py  efficiency_over_time_example.py  full_dashboard.py  hr_vs_speed_duration_example.py  hr_zone_mix_example.py  plot_card_common.py
examples/data/: 1.tcx  10.tcx  12.tcx  13.tcx  14.tcx  15.tcx  17.tcx  19.tcx  20.tcx  4.tcx  5.tcx  9.tcx
pace_view/: ast_tcx_reader.py  config.py  core.py  data_cleaning.py  data_parsing.py  learning.py  mining.py  physics.py
scripts/: main.py
templates/: activity_detail.html
