[tool.poetry]
name = "pace_view"
version = "0.1.0"
description = "Explainable Cycling Intelligence Dashboard"
authors = ["Sebastian Guertl", "Sebastian Pack", "Iztok Fister Jr.", "Andreas Holzinger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sport-activities-features = "^0.5.4"
numpy = "^2.4.2"
scikit-learn = "^1.8.0"
niaarm = "^0.4.6"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pace_view"
version = "0.1.0"
description = "Explainable Cycling Intelligence Dashboard"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Sebastian Pack", email = "sebastian.pack@tugraz.at"}, {name = "Sebastian Guertl", email="sebastian.guertl@tugraz.at"}, {name = "Iztok Fister Jr.", email="iztok@iztok-jr-fister.eu"}, {name = "Andreas Holzinger", email="andreas.holzinger@human-centered.ai"}]
dependencies = []

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser"
]